[gd_scene load_steps=21 format=3 uid="uid://tlvpop5rp1x6"]

[ext_resource type="Script" path="res://scripts/spell_select_ui.gd" id="1_6jhhb"]
[ext_resource type="PackedScene" uid="uid://sdwnoh61gawa" path="res://scenes/reusables/skill_info.tscn" id="2_ae65f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tvmj8"]
content_margin_left = 10.0
content_margin_top = 5.0
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_top = 17.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rghh4"]
bg_color = Color(0.255, 0.311, 0.287, 0.87)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1dgm8"]
content_margin_right = 0.0
bg_color = Color(0.246653, 0.378583, 0.631853, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ur654"]
bg_color = Color(0.180392, 0.180392, 0.180392, 0.470588)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c8eds"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_667es"]
bg_color = Color(0.254902, 0.309804, 0.286275, 0.870588)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ni84r"]
bg_color = Color(0.247059, 0.380392, 0.631373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sleic"]
bg_color = Color(0.180392, 0.180392, 0.180392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_edv3q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pfass"]
bg_color = Color(0.254902, 0.309804, 0.286275, 0.870588)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q85v1"]
bg_color = Color(0.247059, 0.380392, 0.631373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lt1l8"]
bg_color = Color(0.180392, 0.180392, 0.180392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4ccb"]
bg_color = Color(0.254902, 0.309804, 0.286275, 0.870588)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i2ev1"]
bg_color = Color(0.247059, 0.380392, 0.631373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s2255"]
bg_color = Color(0.223103, 0.223103, 0.223103, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6v8fa"]
shadow_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_1aora"]
font_size = 41
font_color = Color(0.878646, 0.868238, 0.89352, 1)
outline_size = 7
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1vgtr"]
font_size = 90
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="SpellSelectUi" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = 18.0
offset_bottom = 18.0
script = ExtResource("1_6jhhb")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 286.0
offset_bottom = 191.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_tvmj8")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="BA1Panel" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1

[node name="ba_1" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/BA1Panel"]
custom_minimum_size = Vector2(261, 39)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.705882)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 36
theme_override_styles/disabled = SubResource("StyleBoxFlat_rghh4")
theme_override_styles/hover = SubResource("StyleBoxFlat_1dgm8")
theme_override_styles/normal = SubResource("StyleBoxFlat_ur654")
text = "Basic Attack"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_c8eds")

[node name="SP1Panel" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="S1" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/SP1Panel"]
custom_minimum_size = Vector2(0, 39)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.705882)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 36
theme_override_styles/disabled = SubResource("StyleBoxFlat_667es")
theme_override_styles/hover = SubResource("StyleBoxFlat_ni84r")
theme_override_styles/normal = SubResource("StyleBoxFlat_sleic")
text = "Spell 1"

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 11
theme_override_styles/separator = SubResource("StyleBoxFlat_edv3q")

[node name="SP2Panel" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="S2" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/SP2Panel"]
custom_minimum_size = Vector2(0, 39)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.705882)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 36
theme_override_styles/disabled = SubResource("StyleBoxFlat_pfass")
theme_override_styles/hover = SubResource("StyleBoxFlat_q85v1")
theme_override_styles/normal = SubResource("StyleBoxFlat_lt1l8")
text = "Spell 2"

[node name="VSeparator3" type="VSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 11
theme_override_styles/separator = SubResource("StyleBoxFlat_edv3q")

[node name="ULTPanel" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ULT" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ULTPanel"]
custom_minimum_size = Vector2(0, 39)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.705882)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 36
theme_override_styles/disabled = SubResource("StyleBoxFlat_v4ccb")
theme_override_styles/hover = SubResource("StyleBoxFlat_i2ev1")
theme_override_styles/normal = SubResource("StyleBoxFlat_s2255")
text = "Ultimate
"

[node name="SkillInfo" parent="." instance=ExtResource("2_ae65f")]
visible = false
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 272.0
offset_top = 25.0
offset_right = 533.0
offset_bottom = 48.0

[node name="SkillInfo2" parent="." instance=ExtResource("2_ae65f")]
visible = false
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 274.0
offset_top = 56.0
offset_right = 535.0
offset_bottom = 79.0

[node name="SkillInfo3" parent="." instance=ExtResource("2_ae65f")]
visible = false
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 273.0
offset_top = 87.0
offset_right = 534.0
offset_bottom = 110.0

[node name="SkillInfo4" parent="." instance=ExtResource("2_ae65f")]
visible = false
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 273.0
offset_top = 119.0
offset_right = 534.0
offset_bottom = 142.0

[node name="PositionContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 73.0
offset_top = 246.0
offset_right = 219.0
offset_bottom = 368.0
theme_override_styles/panel = SubResource("StyleBoxFlat_6v8fa")

[node name="Position" type="Label" parent="."]
layout_mode = 0
offset_left = 75.0
offset_top = 248.0
offset_right = 220.0
offset_bottom = 285.0
theme_override_font_sizes/font_size = 0
text = "POSITION"
label_settings = SubResource("LabelSettings_1aora")
horizontal_alignment = 1

[node name="PosNumber" type="Label" parent="."]
layout_mode = 0
offset_left = 127.0
offset_top = 285.0
offset_right = 167.0
offset_bottom = 368.0
label_settings = SubResource("LabelSettings_1vgtr")

[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/BA1Panel/ba_1" to="." method="_on_ba_1_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/VBoxContainer/BA1Panel/ba_1" to="." method="_on_ba_1_mouse_exited"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/BA1Panel/ba_1" to="." method="_on_ba_1_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/BA1Panel/ba_1" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/SP1Panel/S1" to="." method="_on_s_1_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/VBoxContainer/SP1Panel/S1" to="." method="_on_s_1_mouse_exited"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SP1Panel/S1" to="." method="_on_s_1_pressed"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/SP2Panel/S2" to="." method="_on_s_2_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/VBoxContainer/SP2Panel/S2" to="." method="_on_s_2_mouse_exited"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SP2Panel/S2" to="." method="_on_s_2_pressed"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/ULTPanel/ULT" to="." method="_on_ult_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/VBoxContainer/ULTPanel/ULT" to="." method="_on_ult_mouse_exited"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ULTPanel/ULT" to="." method="_on_ult_pressed"]
